--- a/templates/partials/accounts/editar_grupo.html
+++ b/templates/partials/accounts/editar_grupo.html
@@ -1,3 +1,4 @@
+{% if perms.auth.change_group %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -26,3 +27,8 @@
 
   </div>
 </div>
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
