--- a/templates/partials/home_content.html
+++ b/templates/partials/home_content.html
@@ -4,10 +4,10 @@
 <div id="welcome-screen" class="home-background"></div>
 
 <!-- 💬 Mensagem de boas-vindas -->
-<div class="container py-5">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-10 col-lg-8">
-      <div class="card shadow-lg border-0 p-4 welcome-card text-center">
+<div class="pt-4 pb-3 d-flex justify-content-center">
+  <div class="card shadow-lg border-0 p-4 welcome-card text-center" style="max-width: 720px; width: 100%;">
+
+
         <div class="row align-items-center">
           
           <!-- 🖼️ Imagem ilustrativa -->
