--- a/templates/empresas/cadastrar_categoria.html
+++ b/templates/empresas/cadastrar_categoria.html
@@ -1,3 +1,4 @@
+{% if perms.empresas.add_categoria %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -55,4 +56,8 @@
     </script>
 </body>
 </html>
-
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
