--- a/templates/empresas/editar_empresa.html
+++ b/templates/empresas/editar_empresa.html
@@ -1,3 +1,4 @@
+{% if perms.empresas.change_empresa %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -18,3 +19,8 @@
     </div>
 </body>
 </html>
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
