--- a/templates/empresas/form_empresa.html
+++ b/templates/empresas/form_empresa.html
@@ -1,3 +1,4 @@
+{% if perms.empresas.add_empresa %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -50,3 +51,8 @@
     </script>
 </body>
 </html>
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
