--- a/templates/partials/accounts/confirmar_exclusao_grupo.html
+++ b/templates/partials/accounts/confirmar_exclusao_grupo.html
@@ -1,3 +1,4 @@
+{% if perms.auth.delete_group %}
 {% load static %}
 
 <div class="d-flex justify-content-center">
@@ -31,3 +32,8 @@
 
   </div>
 </div>
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
