--- a/templates/partials/accounts/editar_permissoes.html
+++ b/templates/partials/accounts/editar_permissoes.html
@@ -1,3 +1,4 @@
+{% if perms.auth.change_permission %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -57,4 +58,8 @@
     </form>
   </div>
 </div>
-
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
