--- a/templates/partials/accounts/editar_usuario.html
+++ b/templates/partials/accounts/editar_usuario.html
@@ -1,3 +1,4 @@
+{% if perms.accounts.change_user %}
 {% load static %}
 
 <!-- ✏️ Formulário de edição de usuário -->
@@ -68,3 +69,8 @@
     </form>
   </div>
 </div>
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
