--- a/templates/partials/accounts/gerenciar_permissoes_geral.html
+++ b/templates/partials/accounts/gerenciar_permissoes_geral.html
@@ -1,3 +1,4 @@
+{% if perms.auth.change_permission %}
 <div class="container py-4">
 
   <!-- Identificador da tela para scripts -->
@@ -118,7 +119,8 @@
     }
   });
 </script>
-
-
-
-
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
