--- a/templates/partials/accounts/selecionar_usuario_permissoes.html
+++ b/templates/partials/accounts/selecionar_usuario_permissoes.html
@@ -1,3 +1,4 @@
+{% if perms.auth.change_permission %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -60,3 +61,8 @@
     </ul>
   </form>
 </div>
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
