--- a/templates/partials/accounts/visualizar_permissoes_grupo.html
+++ b/templates/partials/accounts/visualizar_permissoes_grupo.html
@@ -1,3 +1,4 @@
+{% if perms.auth.view_group %}
 {% load static %}
 
 <!-- ✅ Container Principal -->
@@ -47,5 +48,9 @@
   </div>
 
 </div>
-
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
 
