--- a/templates/partials/empresas/cadastrar_categoria.html
+++ b/templates/partials/empresas/cadastrar_categoria.html
@@ -1,3 +1,4 @@
+{% if perms.empresas.add_categoria %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -43,3 +44,8 @@
     </ul>
   </div>
 </div>
+{% else %}
+<div class="alert alert-danger text-center mt-5">
+  Você não tem permissão para acessar esta funcionalidade.
+</div>
+{% endif %}
