--- a/templates/partials/nova_empresa/cadastrar_empresa_avancado.html
+++ b/templates/partials/nova_empresa/cadastrar_empresa_avancado.html
@@ -17,6 +17,9 @@
         <button class="nav-link" id="contato-tab" data-bs-toggle="tab" data-bs-target="#contato" type="button" role="tab">Contato</button>
       </li>
       <li class="nav-item" role="presentation">
+        <button class="nav-link" id="financeiro-tab" data-bs-toggle="tab" data-bs-target="#financeiro" type="button" role="tab">Financeiro</button>
+      </li>
+      <li class="nav-item" role="presentation">
         <button class="nav-link" id="comercial-tab" data-bs-toggle="tab" data-bs-target="#comercial" type="button" role="tab">Comercial</button>
       </li>
     </ul>
@@ -37,9 +40,7 @@
           <div class="mb-3"><label class="form-label">Razão Social</label><input type="text" name="razao_social" class="form-control"></div>
           <div class="mb-3"><label class="form-label">Nome Fantasia</label><input type="text" name="nome_fantasia" class="form-control"></div>
           <div class="mb-3"><label class="form-label">CNPJ</label><input type="text" name="cnpj" class="form-control mascara-cnpj"></div>
-          <div class="mb-3"><label for="id_ie" class="form-label">Inscrição Estadual</label><input type="text" name="inscricao_estadual" class="form-control mascara-ie" maxlength="15">
-          </div>
-          
+          <div class="mb-3"><label class="form-label">Inscrição Estadual</label><input type="text" name="inscricao_estadual" class="form-control mascara-ie"></div>
         </div>
 
         <!-- Pessoa Física -->
@@ -52,62 +53,47 @@
 
         <div class="mb-3"><label class="form-label">CNAE Principal</label><input type="text" name="cnae_principal" class="form-control"></div>
         <div class="mb-3"><label class="form-label">CNAE Secundário</label><input type="text" name="cnae_secundario" class="form-control"></div>
+	<div class="mb-3">{{ form.categoria.label_tag }} {{ form.categoria }}</div>
+        <div class="mb-3">{{ form.status_empresa.label_tag }} {{ form.status_empresa }}</div>
         <div class="mb-3"><label class="form-label">Data de Abertura</label><input type="date" name="data_abertura" class="form-control"></div>
         <div class="mb-3"><label class="form-label">Data de Cadastro</label><input type="date" name="data_cadastro" class="form-control" value="{{ today|date:'Y-m-d' }}"></div>
       </div>
 
       <div class="tab-pane fade p-3" id="endereco" role="tabpanel">
-        <div class="row mb-3">
-          <div class="col-md-4">
-            <label for="cep" class="form-label">CEP</label>
-            <input type="text" id="cep" name="cep" class="form-control mascara-cep" maxlength="9">
-          </div>
-          <div class="col-md-8">
-            <label for="rua" class="form-label">Rua</label>
-            <input type="text" id="rua" name="rua" class="form-control">
-          </div>
-        </div>
-      
-        <div class="row mb-3">
-          <div class="col-md-4">
-            <label for="numero" class="form-label">Número</label>
-            <input type="text" id="numero" name="numero" class="form-control">
-          </div>
-          <div class="col-md-4">
-            <label for="bairro" class="form-label">Bairro</label>
-            <input type="text" id="bairro" name="bairro" class="form-control">
-          </div>
-          <div class="col-md-4">
-            <label for="complemento" class="form-label">Complemento</label>
-            <input type="text" id="complemento" name="complemento" class="form-control">
-          </div>
-        </div>
-      
-        <div class="row mb-3">
-          <div class="col-md-8">
-            <label for="cidade" class="form-label">Cidade</label>
-            <input type="text" id="cidade" name="cidade" class="form-control">
-          </div>
-          <div class="col-md-4">
-            <label for="estado" class="form-label">Estado</label>
-            <input type="text" id="estado" name="estado" class="form-control">
-          </div>
-        </div>
+        <div class="mb-3">{{ form.cep.label_tag }} {{ form.cep }}</div>
+        <div class="mb-3">{{ form.logradouro.label_tag }} {{ form.logradouro }}</div>
+        <div class="mb-3">{{ form.numero.label_tag }} {{ form.numero }}</div>
+        <div class="mb-3">{{ form.complemento.label_tag }} {{ form.complemento }}</div>
+        <div class="mb-3">{{ form.bairro.label_tag }} {{ form.bairro }}</div>
+        <div class="mb-3">{{ form.cidade.label_tag }} {{ form.cidade }}</div>
+        <div class="mb-3">{{ form.uf.label_tag }} {{ form.uf }}</div>
       </div>
-      
 
       <div class="tab-pane fade p-3" id="contato" role="tabpanel">
-        <div class="mb-3"><label class="form-label">Telefone</label><input type="text" name="telefone" class="form-control mascara-telefone"></div>
-        <div class="mb-3"><label class="form-label">Celular</label><input type="text" name="celular" class="form-control mascara-celular"></div>
-        <div class="mb-3"><label class="form-label">E-mail</label><input type="email" name="email" class="form-control"></div>
-        <div class="mb-3"><label class="form-label">Site</label><input type="url" name="site" class="form-control"></div>
+        <div class="mb-3">{{ form.telefone.label_tag }} {{ form.telefone }}</div>
+        <div class="mb-3">{{ form.celular.label_tag }} {{ form.celular }}</div>
+        <div class="mb-3">{{ form.whatsapp.label_tag }} {{ form.whatsapp }}</div>
+        <div class="mb-3">{{ form.email.label_tag }} {{ form.email }}</div>
+        <div class="mb-3">{{ form.site.label_tag }} {{ form.site }}</div>
+      </div>
+
+      <div class="tab-pane fade p-3" id="financeiro" role="tabpanel">
+        <div class="mb-3">{{ form.contato_financeiro_nome.label_tag }} {{ form.contato_financeiro_nome }}</div>
+        <div class="mb-3">{{ form.contato_financeiro_email.label_tag }} {{ form.contato_financeiro_email }}</div>
+        <div class="mb-3">{{ form.contato_financeiro_telefone.label_tag }} {{ form.contato_financeiro_telefone }}</div>
+        <div class="mb-3">{{ form.contato_financeiro_celular.label_tag }} {{ form.contato_financeiro_celular }}</div>
       </div>
 
       <div class="tab-pane fade p-3" id="comercial" role="tabpanel">
-        <div class="mb-3"><label class="form-label">Vendedor Responsável</label><select name="vendedor_responsavel" class="form-select">{% for vendedor in vendedores %}<option value="{{ vendedor.id }}">{{ vendedor.get_full_name }}</option>{% endfor %}</select></div>
-        <div class="mb-3"><label class="form-label">Condição de Pagamento</label><input type="text" name="condicao_pagamento" class="form-control"></div>
-        <div class="mb-3"><label class="form-label">Comissão (%)</label><input type="number" step="0.01" name="comissao" class="form-control"></div>
-        <div class="mb-3"><label class="form-label">Observações</label><textarea name="observacoes_comerciais" class="form-control"></textarea></div>
+        <div class="mb-3">{{ form.contato_comercial_nome.label_tag }} {{ form.contato_comercial_nome }}</div>
+        <div class="mb-3">{{ form.contato_comercial_email.label_tag }} {{ form.contato_comercial_email }}</div>
+        <div class="mb-3">{{ form.contato_comercial_telefone.label_tag }} {{ form.contato_comercial_telefone }}</div>
+        <div class="mb-3">{{ form.contato_comercial_celular.label_tag }} {{ form.contato_comercial_celular }}</div>
+        <div class="mb-3">{{ form.vendedor.label_tag }} {{ form.vendedor }}</div>
+        <div class="mb-3">{{ form.condicao_pagamento.label_tag }} {{ form.condicao_pagamento }}</div>
+        <div class="mb-3">{{ form.comissao.label_tag }} {{ form.comissao }}</div>
+        <div class="mb-3">{{ form.observacoes.label_tag }} {{ form.observacoes }}</div>
+        
       </div>
     </div>
 
