Módulo NCM Concluido

--- a/templates/partials/produtos/cadastrar_produto.html
+++ b/templates/partials/produtos/cadastrar_produto.html
@@ -18,7 +18,7 @@
       <div class="col-md-6">{{ form.unidade_medida.label_tag }} {{ form.unidade_medida|add_class:"form-select" }}</div>
 
       <!-- Fiscais -->
-      <div class="col-md-4">{{ form.ncm.label_tag }} {{ form.ncm }}</div>
+      <div class="col-md-8">{{ form.ncm_descricao.label_tag }} {{ form.ncm_descricao|add_class:"form-control" }}</div>
       <div class="col-md-4">{{ form.cfop.label_tag }} {{ form.cfop|add_class:"form-control" }}</div>
 
       <!-- Preços -->
