--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>OneTech - Painel</title>
+<link rel="shortcut icon" href="{% static 'icons/favicon.ico' %}" type="image/x-icon">
 
 <!-- 🚀 Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -209,6 +210,27 @@
     </ul>
   </div>
 </div>
+
+<!-- 📊 Relatórios -->
+<div class="accordion-item">
+  <h2 class="accordion-header">
+    <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#submenu-relatorios" type="button">
+      📊 Relatórios
+    </button>
+  </h2>
+  <div id="submenu-relatorios" class="accordion-collapse collapse">
+    <ul class="list-group list-group-flush">
+      <li>
+        <a href="{% url 'relatorios:notas_entradas' %}" class="list-group-item ajax-link">
+          Entradas de Nota
+        </a>
+      </li>
+      <!-- futuros submenus aqui -->
+    </ul>
+  </div>
+</div>
+
+
 </div>
 </nav>
 </aside>
@@ -254,16 +276,9 @@
 <!-- Scripts específicos da página -->
 <script defer src="{% static 'js/importar_xml.js' %}"></script>
 
-<!-- Iniciar importar_xml.js apenas após todos os scripts carregados -->
 
-<!--<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    if (typeof initImportarXML === "function") {
-      initImportarXML();
-    } else {
-      console.error("initImportarXML não encontrado! Verifique ordem de scripts.");
-    }
-  });
-</script>-->
+{% block extra_js %}
+<script defer src="{% static 'js/relatorios/notas_entradas.js' %}"></script>
+{% endblock %}
 </body>
 </html>
